# llmagents

./: .gitignore  README.md  config.json.example  pyproject.toml  requirements.txt  server_config.json  toolCalculator.py  toolTerminal.py  toolreturn1.py
client/: any_client.py  client.py  multi_tool_client.py  reAct.py  sse_client.py
httptool/: sse_command.py  sse_database.py
tool/: calculator.py  command.py  randomnum.py
